add icon for real this time

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
      "http://*/"
  	],
  	"browser_action": {
- 		/*"default_icon": "circle_grey.png",*/
+ 		"default_icon": "circle_grey.png",
  		"default_popup": "popup.html"
  	}
  }
